fix: decrease the width of scroll indicator
So in absolute mode it does not cover the main Atom's scroller

--- a/styles/minimap.less
+++ b/styles/minimap.less
@@ -108,7 +108,7 @@ atom-text-editor, html {
       position: absolute;
       display: block;
       right: 0;
-      width: 2px;
+      width: 1.5px;
       min-height: 2px;
       z-index: 10;
       background: #fff - @background-color-selected; // invert color
